Validacion de correo en login

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -46,7 +46,7 @@
     <div class="ion-text-center ion-padding-top">
     <ion-button  class="submit-btn" type="submit"  [disabled]="!validationsForm.valid">INGRESAR</ion-button>
       <br>
-      <label class="error-message">{{errorMessage}}</label>
+      <label  style="color: red;">{{errorMessage}}</label>
     </div>
 
   </form>
