--- a/src/app/pages/maintenance/clientes/clientes.page.html
+++ b/src/app/pages/maintenance/clientes/clientes.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-card>
+  <!-- <ion-card>
     <ion-card-content>
       <ion-list>
         <ion-item *ngFor="let usuario of usuarios">
@@ -17,19 +17,39 @@
             <h3></h3>
             <p>{{usuario.email}}</p>
           </ion-label>
-          <ion-button fill="outline" slot="end">
-            Eliminar
-          </ion-button>
+          <ion-toggle [(ngModel)]="usuario.activo" (ionChange)="actualizar(usuario)">Habilitar</ion-toggle>
         </ion-item>
       </ion-list>
     </ion-card-content>
-  </ion-card>
+  </ion-card> -->
 
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-item>
+    <ion-label position="floating" style="font: size 15px;"><strong>Buscar</strong></ion-label>
+    <ion-input name="nombre" type="text" [(ngModel)]="texto" (ionChange)="buscar()"></ion-input>
+</ion-item>
+
+  <ion-grid>
+    <ion-row class="ion-padding-bottom" >
+      <ion-col size="9"> <strong>Usuario</strong>        
+      </ion-col>
+      <ion-col size="3"><strong>Acceso</strong></ion-col>
+    </ion-row>
+    <ion-row class="ion-padding-bottom" *ngFor="let usuario of usuarios">
+      <ion-col size="9">          
+        <ion-label>
+        <h2>{{usuario.nombre}} {{usuario.apellidos}}</h2>
+        <h3></h3>
+        <p>{{usuario.email}}</p>
+      </ion-label></ion-col>
+      <ion-col size="3"><ion-toggle [(ngModel)]="usuario.activo" (ionChange)="actualizar(usuario)">Habilitar</ion-toggle></ion-col>
+    </ion-row>
+  </ion-grid>  
+
+  <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button color="secondary">
       <ion-icon md="add-circle-sharp"></ion-icon>
     </ion-fab-button>
-  </ion-fab>
+  </ion-fab> -->
 
 </ion-content>
