--- a/src/app/pages/reserva/reserva.page.html
+++ b/src/app/pages/reserva/reserva.page.html
@@ -17,8 +17,8 @@
 
 
 
-    <ion-item>
-        <ion-label position="floating">Filtro:</ion-label>
+    <ion-item class="ion-text-center">
+        <ion-label position="floating"></ion-label>
         <ion-select [(ngModel)]="filtro"
                     interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
             <ion-select-option value="PENDIENTE">Pendientes</ion-select-option>
@@ -45,7 +45,7 @@
 
 
                         <ion-row class="">
-                            <ion-col size="8">
+                            <ion-col size="8" (click)="mostrarModal(reserva.cancha)">
                                 <div class="ion-padding-top ion-padding-start ion-padding-bottom" style="height: 90px">
                                     <h1 style="font-size: 20px;" class="ion-no-margin">
                                         {{reserva.cancha.nombre}}</h1>
@@ -59,13 +59,13 @@
 
                             <ion-col size="4">
                                 <ion-row>
-                                    <ion-button fill="outline" color="light"  (click)="llamar()">
-                                        <ion-icon color="success" md="person-add-sharp"></ion-icon>
+                                    <ion-button fill="outline" color="light"  (click)="agregarEquipo()">
+                                        <ion-icon color="primary" md="person-add"></ion-icon>
                                     </ion-button>
                                 </ion-row>
                                 <ion-row>
-                                    <ion-button fill="outline" color="light" (click)="pagar()">
-                                        <ion-icon color="warning" md="football-outline"></ion-icon>
+                                    <ion-button fill="outline" color="light" (click)="realizarPago()">
+                                        <ion-icon color="success" md="wallet"></ion-icon>
                                     </ion-button>
                                 </ion-row>
                             </ion-col>
