--- a/src/app/pages/maintenance/cancha/cancha.page.html
+++ b/src/app/pages/maintenance/cancha/cancha.page.html
@@ -7,6 +7,12 @@
   </ion-toolbar>
 </ion-header>
 
+
+<ion-item>
+  <ion-label position="floating" style="font: size 15px;"><strong>Buscar</strong></ion-label>
+  <ion-input name="nombre" type="text" [(ngModel)]="texto" (ionChange)="buscar()"></ion-input>
+</ion-item>
+
 <ion-content class="ion-padding">
   <ion-card>
     <ion-card-content>
