--- a/src/app/pages/maintenance/cancha/cancha.page.html
+++ b/src/app/pages/maintenance/cancha/cancha.page.html
@@ -38,7 +38,7 @@
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="mostrarModal()" color="secondary">
-      <ion-icon md="add-circle-sharp"></ion-icon>
+      <ion-icon md="plus"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
