--- a/src/app/pages/reserva/reserva.page.html
+++ b/src/app/pages/reserva/reserva.page.html
@@ -64,7 +64,7 @@
                                     </ion-button>
                                 </ion-row>
                                 <ion-row>
-                                    <ion-button fill="outline" color="light" (click)="realizarPago()">
+                                    <ion-button fill="outline" color="light" (click)="realizarPago(reserva.cancha)">
                                         <ion-icon color="success" md="wallet"></ion-icon>
                                     </ion-button>
                                 </ion-row>
