--- a/src/app/components/mostrar-cancha/mostrar-cancha.component.html
+++ b/src/app/components/mostrar-cancha/mostrar-cancha.component.html
@@ -22,7 +22,6 @@
     </ion-item-divider>
 
     <p>lacancha@hotmail.com</p>
-
       <ion-row>
         <ion-col size="6">
           <ion-button fill="outline" color="light" (click)="llamar(cancha.telefono)">
@@ -35,6 +34,15 @@
           </ion-button>
         </ion-col>
       </ion-row>
+
+    <ion-row>
+      <ion-col size="6">
+        LLAMAR
+      </ion-col>
+      <ion-col size="6">
+       MENSAJE
+      </ion-col>
+    </ion-row>
 
 
 
