--- a/src/app/pages/maintenance/ubicacion/ubicacion.page.html
+++ b/src/app/pages/maintenance/ubicacion/ubicacion.page.html
@@ -29,7 +29,7 @@
 
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button (click)="crearCanchaPrueba()" color="secondary">
-      <ion-icon md="add-circle-sharp"></ion-icon>
+      <ion-icon md="plus"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
