--- a/src/app/pages/retos/retos.page.html
+++ b/src/app/pages/retos/retos.page.html
@@ -1,43 +1,59 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>retos</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>retos</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <h1 class="ion-text-center">RETOS</h1>
-   <!--<ion-card>-->
+    <h1 class="ion-text-center">RETOS</h1>
+    <!--<ion-card>-->
     <!--<ion-card-content>-->
-      <!--<ion-list>-->
-        <!--<ion-item *ngFor="let retos of retos">-->
-          <!--<ion-label>-->
-            <!--<h2>{{retos.region}}</h2>-->
-            <!--<h3>{{retos.summary}}</h3>-->
-          <!--</ion-label>-->
-          <!--<ion-button fill="outline" slot="end">-->
-            <!--Ver-->
-          <!--</ion-button>-->
-        <!--</ion-item>-->
+    <!--<ion-list>-->
+    <!--<ion-item *ngFor="let retos of retos">-->
+    <!--<ion-label>-->
+    <!--<h2>{{retos.region}}</h2>-->
+    <!--<h3>{{retos.summary}}</h3>-->
+    <!--</ion-label>-->
+    <!--<ion-button fill="outline" slot="end">-->
+    <!--Ver-->
+    <!--</ion-button>-->
+    <!--</ion-item>-->
 
-      <!--</ion-list>-->
+    <!--</ion-list>-->
     <!--</ion-card-content>-->
-  <!--</ion-card>-->
+    <!--</ion-card>-->
 
-  <!-- <div style="height:30%;
-  background-color: #003300;
-  border-radius: 0 0 70px 70px;
-  ">
-  </div>
+    <!-- <div style="height:30%;
+    background-color: #003300;
+    border-radius: 0 0 70px 70px;
+    ">
+    </div>
 
-  <ion-button >
-    BUSCAR
-  </ion-button> -->
+    <ion-button >
+      BUSCAR
+    </ion-button> -->
 
-  <ion-fab vertical="bottom" horizontal="end" slot="fixed">
-    <ion-fab-button (click)="mostrarModal()" color="secondary">
-      <ion-icon md="add-circle-sharp"></ion-icon>
-    </ion-fab-button>
-  </ion-fab>
+    <!--<ion-fab vertical="bottom" horizontal="end" slot="fixed">-->
+    <!--<ion-fab-button color="secondary">-->
+    <!--<ion-icon md="add-circle-sharp"></ion-icon>-->
+    <!--</ion-fab-button>-->
+    <!--</ion-fab>-->
+
+    <ion-fab horizontal="end" vertical="bottom" slot="fixed">
+        <ion-fab-button color="secondary" class="">
+            <ion-icon md="plus"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-list side="top">
+            <ion-fab-button color="primary" data-desc="Reto">
+                <ion-icon md="play-forward-sharp"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button color="primary" (click)="mostrarModal()" data-desc="Reserva">
+                <ion-icon md="location-sharp"></ion-icon>
+            </ion-fab-button>
+        </ion-fab-list>
+    </ion-fab>
+
+
 
 </ion-content>
