--- a/src/app/pages/maintenance/cancha/cancha.page.html
+++ b/src/app/pages/maintenance/cancha/cancha.page.html
@@ -9,7 +9,7 @@
 
 
 <ion-item>
-  <ion-label position="floating" style="font: size 15px;"><strong>Buscar</strong></ion-label>
+  <ion-label position="floating"><strong>Buscar</strong></ion-label>
   <ion-input name="nombre" type="text" [(ngModel)]="texto" (ionChange)="buscar()"></ion-input>
 </ion-item>
 
