--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar color="primary">
-        <ion-title>Crear Cacha</ion-title>
+        <ion-title>Crear Cancha</ion-title>
         <ion-buttons slot="start">
             <ion-button (click)="cerrarModal()">
                 <ion-icon style="font-size: 25px;" md="close-circle"></ion-icon>
