--- a/src/app/pages/maintenance/profile/profile.page.html
+++ b/src/app/pages/maintenance/profile/profile.page.html
@@ -41,24 +41,20 @@
     <ion-label position="floating">Telefono</ion-label>
     <ion-input [(ngModel)]="usuario.telefono" [disabled]="editar"></ion-input>
   </ion-item>
-
-  <ion-item>
-    <ion-label position="floating">Sexo</ion-label>
-    <ion-input [(ngModel)]="usuario.sexo" [disabled]="editar"></ion-input>
-  </ion-item>
-
-  <ion-row>
-    <ion-col size="6">
-        <ion-item class="ion-no-padding">
-            <ion-label>Estado</ion-label>
-            <ion-toggle name="estado" [(ngModel)]="usuario.estado" [disabled]="editar"></ion-toggle>
-        </ion-item>
-    </ion-col>
-</ion-row>
-
-
   
- 
+<ion-item>
+  <ion-label position="floating">Genero</ion-label>
+  <ion-select multiple="false" name="genero" [(ngModel)]="usuario.genero" required
+              interface="action-sheet" cancelText="Cancelar" doneText="Aceptar" [disabled]="editar" >
+      <ion-select-option *ngFor="let x of generos" value="{{x}}">{{x}}</ion-select-option>
+  </ion-select>
+</ion-item>
+
+
+<ion-button class="ion-padding" expand="block" color="secondary" (click)="crearEquipo()">
+  {{this.editar ? 'CREAR' : 'SALIR'}}
+</ion-button>
+
 
 
     <ion-button class="ion-padding" expand="block" color="secondary" (click)="editarPerfil()">
