--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -112,10 +112,11 @@
                 <ion-item>
                     <ion-label position="floating">Método de Pago</ion-label>
                     <ion-select name="metodoPago" [(ngModel)]="canchaObjeto.metodoPago.tipo" required
-                                (ionChange)="changeProvincia()"
+                                (ionChange)="changeMetodoPago()"
                                 interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
-                        <ion-select-option *ngFor="let ubi of ubicacion"
-                                           value="{{ubi.codigoProvincia}}">{{ubi.descripcion}}</ion-select-option>
+                                <ion-select-option value="SINPE Movil">SINPE Movil</ion-select-option>
+                                <ion-select-option value="Efecivo en sitio">Efectivo en sitio</ion-select-option>
+                                <ion-select-option value="Ambos">Ambos</ion-select-option>
                     </ion-select>
                 </ion-item>
 
@@ -125,6 +126,10 @@
                     <ion-input name="telefono" [(ngModel)]="canchaObjeto.telefono" required type="number"></ion-input>
                 </ion-item>
 
+                <ion-item>
+                    <ion-label position="floating">Correo Electronico</ion-label>
+                    <ion-input name="correo" [(ngModel)]="canchaObjeto.correo" required type="email"></ion-input>
+                </ion-item>
 
                 <ion-row>
                     <ion-col size="6">
