--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -3,6 +3,7 @@
 
     <ion-list-header  class="ion-text-start">
     <span *ngIf="usuario.nombre"> {{(usuario.nombre + ' ' + usuario.apellidos).toUpperCase()}} </span>
+      <span *ngIf="!usuario.nombre"> USUARIO </span>
     </ion-list-header>
 
     <ion-item button (click)="perfil()">
