--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -10,7 +10,7 @@
       <ion-icon slot="start" md="person-sharp"></ion-icon>
       Perfil
     </ion-item>
-    <ion-item button>
+    <ion-item button  (click)="equipo()">
       <ion-icon slot="start" md="football-sharp"></ion-icon>
       Equipo
     </ion-item>
