--- a/src/app/pages/maintenance/profile/profile.page.html
+++ b/src/app/pages/maintenance/profile/profile.page.html
@@ -56,7 +56,7 @@
 
 
     <ion-button class="ion-padding" expand="block" color="secondary" (click)="editarPerfil()">
-      {{this.editar ? 'EDITAR' : 'GUARDAR'}}
+      {{editar ? 'EDITAR' : 'GUARDAR'}}
     </ion-button>
 
 
