--- a/src/app/crear-equipo/crear-equipo.component.html
+++ b/src/app/crear-equipo/crear-equipo.component.html
@@ -69,7 +69,7 @@
   <ion-card>
 
       <ion-card-content>
-          <form class="form" (ngSubmit)="guardar()">
+          <form class="form">
 
               <ion-item>
                   <ion-label position="floating">Nombre del Equipo</ion-label>
@@ -87,15 +87,14 @@
           </ion-item>
 
           <ion-button class="ion-padding" expand="block" color="secondary" (click)="crearEquipo()">
-            {{this.editar ? 'Crear Equipo' : 'Editar Equipo'}}
+            {{editar ? 'Crear Equipo' : 'Editar Equipo'}}
           </ion-button>
 
           <ion-button class="ion-padding" expand="block" color="secondary" (click)="editarEquipo()">
-            {{this.editar ? 'Editar Equipo' : 'GUARDAR'}}
+            {{editar ? 'Editar Equipo' : 'GUARDAR'}}
           </ion-button>
 
           </form>
       </ion-card-content>
   </ion-card>
 </ion-content>
- 
