--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -123,7 +123,8 @@
 
                 <ion-item *ngIf="canchaObjeto.metodoPago.tipo != null && canchaObjeto.metodoPago.tipo != 'EFECTIVO' ">
                     <ion-label position="floating">Numero sinpe</ion-label>
-                    <ion-input name="telefonoSinpe" [(ngModel)]="canchaObjeto.telefonoSinpe" required type="number" 
+                    <ion-input name="telefonoSinpe" [(ngModel)]="canchaObjeto.telefonoSinpe" required
+                    
                              mask="0000-0000"
                              type="text"
                              maxlength="9"
@@ -133,7 +134,7 @@
 
                 <ion-item>
                     <ion-label position="floating">Telefono Principal</ion-label>
-                    <ion-input name="telefono" [(ngModel)]="canchaObjeto.telefono" required type="number" 
+                    <ion-input name="telefono" [(ngModel)]="canchaObjeto.telefono" required  
                             mask="0000-0000"
                             type="text"
                             maxlength="9"
