--- a/src/app/crear-equipo/crear-equipo.component.html
+++ b/src/app/crear-equipo/crear-equipo.component.html
@@ -1,100 +1,57 @@
 <ion-header>
-  <ion-toolbar color="primary">
-      <ion-title>Crear Equipo</ion-title>
-      <ion-buttons slot="start">
-          <ion-button (click)="cerrarModal()">
-              <ion-icon style="font-size: 25px;" md="close-circle"></ion-icon>
-          </ion-button>
-      </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar color="primary">
+        <ion-title>{{tieneEquipo ? '' : 'Equipo'}}</ion-title>
+        <ion-buttons slot="start">
+            <ion-button (click)="cerrarModal()">
+                <ion-icon style="font-size: 25px;" md="close-circle"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+        <ion-buttons slot="end" *ngIf="tieneEquipo">
+            <ion-button (click)="editarEquipo()" >
+                <ion-icon *ngIf="editar" style="font-size: 25px;" md="save-sharp"></ion-icon>
+                <ion-icon *ngIf="!editar" style="font-size: 25px;" md="create-sharp"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
-
 <ion-content>
+    <div class="changeColor" style="height: 100px" *ngIf="!editar && tieneEquipo">
+        <br>
+        <h1 class="ion-text-center" style="color: white;">{{equipoObjeto.nombre.toUpperCase()}}</h1>
+    </div>
+    <br>
 
-  <div *ngIf="!actualizar">
-      <ion-card class="ion-text-center" *ngIf="!isUploading && !isUploaded">
-          <ion-card-header>
-              <ion-card-title>Foto de Perfil</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-              <div class="fileUpload btn btn-primary">
-                  <input id="uploadBtn" type="file" class="upload" (change)="uploadFile($event.target.files)"/>
-              </div>
-          </ion-card-content>
-      </ion-card>
+    <ion-card>
+        <ion-card-content>
+            <div *ngIf="!editar && tieneEquipo" class="ion-text-center">
+                <h2>{{equipoObjeto.descripcion ? equipoObjeto.descripcion : 'Sin Descripción'}}</h2>
+            </div>
+            <div *ngIf="!tieneEquipo">
+                <p class="ion-no-margin ion-text-center">NOMBRE EQUIPO</p>
+                <ion-item>
+                    <ion-input type="text" class="ion-text-center" [(ngModel)]="equipoObjeto.nombre" required></ion-input>
+                </ion-item>
+            </div>
+            <div *ngIf="editar">
+                <p class="ion-no-margin ion-text-center">NOMBRE EQUIPO</p>
+                <ion-item>
+                    <ion-label position="floating"></ion-label>
+                    <ion-input type="text" class="ion-text-center" [(ngModel)]="equipoObjeto.nombre" required></ion-input>
+                </ion-item>
+                <p class="ion-no-margin ion-text-center">DESCRIPCIÓN</p>
+                <ion-item>
+                    <ion-label position="floating"></ion-label>
+                    <ion-input type="text" class="ion-text-center" [(ngModel)]="equipoObjeto.descripcion" required></ion-input>
+                </ion-item>
+            </div>
+        </ion-card-content>
+    </ion-card>
 
-      <ion-card class="ion-text-center" *ngIf="isUploading && !isUploaded">
-          <ion-card-header>
-              <ion-card-title>Archivo selecionado:<b>{{ fileName }}</b></ion-card-title>
-          </ion-card-header>
 
-          <ion-card-content>
-              <div *ngIf="percentage | async as pct">
-                  Progreso: {{ pct | number }}%
-                  <ion-progress-bar value="{{ pct / 100 }}"></ion-progress-bar>
-              </div>
-              <div *ngIf="snapshot | async as snap">
-                  <!--<p class="ion-no-margin">Tamaño del archivo: {{ snap.totalBytes | fileSizePipe }}-->
-                      <!--Transferido: {{ snap.bytesTransferred | fileSizePipe }}</p>-->
-                  <div *ngIf="snapshot && snap.bytesTransferred != snap.totalBytes">
-                      <ion-button
-                              color="warning"
-                              size="small"
-                              (click)="task.pause()"
-                              class="button is-warning">Pausar
-                      </ion-button>
-                      <ion-button
-                              size="small"
-                              (click)="task.resume()"
-                              class="button is-info">Resumir
-                      </ion-button>
-                      <ion-button
-                              color="danger"
-                              size="small"
-                              (click)="task.cancel()"
-                              class="button is-danger">Cancelar
-                      </ion-button>
-                  </div>
-              </div>
-          </ion-card-content>
-      </ion-card>
-  </div>
 
-  <div *ngIf="actualizar">
-      <img [src]="equipoObjeto.imagen"/>
-      <a [href]="equipoObjeto.imagen" target="_blank" rel="noopener">Download</a>
-  </div>
+    <ion-button *ngIf="!tieneEquipo" class="ion-padding" expand="block" color="secondary" (click)="crearEquipo()">
+        Crear Equipo
+    </ion-button>
 
-  <ion-card>
-
-      <ion-card-content>
-          <form class="form">
-
-              <ion-item>
-                  <ion-label position="floating">Nombre del Equipo</ion-label>
-                  <ion-input name="nombre" type="text" [(ngModel)]="equipoObjeto.nombre" required></ion-input>
-              </ion-item>
-
-              <ion-item>
-                <ion-label position="floating">Descripcion del equipo</ion-label>
-                <ion-input name="descripcion" type="text" [(ngModel)]="equipoObjeto.descripcion" required></ion-input>
-            </ion-item>
-          
-            <ion-item>
-              <ion-label position="floating">Telefono Principal</ion-label>
-              <ion-input name="telefono1" [(ngModel)]="equipoObjeto.telefono" required type="number"></ion-input>
-          </ion-item>
-
-          <ion-button class="ion-padding" expand="block" color="secondary" (click)="crearEquipo()">
-            {{editar ? 'Crear Equipo' : 'Editar Equipo'}}
-          </ion-button>
-
-          <ion-button class="ion-padding" expand="block" color="secondary" (click)="editarEquipo()">
-            {{editar ? 'Editar Equipo' : 'GUARDAR'}}
-          </ion-button>
-
-          </form>
-      </ion-card-content>
-  </ion-card>
 </ion-content>
