--- a/src/app/pages/maintenance/equipos/equipos.page.html
+++ b/src/app/pages/maintenance/equipos/equipos.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>Equipos</ion-title>
     <ion-buttons slot="start">
       <ion-back-button  [text]="''" defaultHref="home"></ion-back-button>
@@ -20,16 +20,17 @@
   <ion-row class="ion-padding-bottom" >
     <ion-col size="9"> <strong>Equipo</strong>        
     </ion-col>
-    <ion-col size="3"><strong>Activo</strong></ion-col>
+    <ion-col size="3"><strong>Disponible</strong></ion-col>
   </ion-row>
-  <ion-row class="ion-padding-bottom" *ngFor="let x of Equipos">
+  <ion-row class="ion-padding-bottom" *ngFor="let equipo of equipos">
     <ion-col size="9">          
       <ion-label>
-      <h2>{{Equipos.nombre}}</h2>
+      <h2>{{equipo.nombre}}</h2>
       <h3></h3>
-      <p>{{usuario.email}}</p>
+      <p>{{equipo.telefono}}</p>
     </ion-label></ion-col>
-    <ion-col size="3"><ion-toggle [(ngModel)]="equipos.activo" (ionChange)="actualizar(equipo)">Habilitar</ion-toggle></ion-col>
+    <ion-col size="3"><ion-toggle [(ngModel)]="equipo.activo" (ionChange)="actualizar(equipo)">Habilitar</ion-toggle></ion-col>
+
   </ion-row>
 </ion-grid>  
 </ion-content>
