--- a/src/app/crear-equipo/crear-equipo.component.scss
+++ b/src/app/crear-equipo/crear-equipo.component.scss
@@ -2,7 +2,50 @@
   --ion-background-color:#002671;
 }
 
-
 .changeColor {
-  background: #002671;
+  background: #326195;
+}
+
+
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #326195;
+  text-align: center;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  background-color: inherit;
+  //float: center;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+  font-size: 15px;
+  color: white;
+  font-weight: bold;
+  width: 33.3%;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #002671;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #002671;
+}
+
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
 }
