--- a/src/app/crear-equipo/crear-equipo.component.html
+++ b/src/app/crear-equipo/crear-equipo.component.html
@@ -1,9 +1,11 @@
 <ion-header>
     <ion-toolbar color="primary">
-        <ion-title>{{tieneEquipo ? '' : 'Equipo'}}</ion-title>
+        <ion-title>{{tieneEquipo ? '' : listaEquiposMostrar.length > 0 ? 'Buscar equipo' :'Equipo'}}</ion-title>
         <ion-buttons slot="start">
-            <ion-button (click)="cerrarModal()">
-                <ion-icon style="font-size: 25px;" md="close-circle"></ion-icon>
+            <ion-button (click)="listaEquiposMostrar.length == 0 ? cerrarModal() : listaEquiposMostrar = []">
+                <ion-icon *ngIf="listaEquiposMostrar.length == 0" style="font-size: 25px;" md="close-circle"></ion-icon>
+                <ion-icon *ngIf="listaEquiposMostrar.length > 0" style="font-size: 25px;"
+                          md="arrow-back-circle-sharp"></ion-icon>
             </ion-button>
         </ion-buttons>
         <ion-buttons slot="end" *ngIf="tieneEquipo">
@@ -22,7 +24,7 @@
     </div>
     <br>
 
-    <ion-card>
+    <ion-card *ngIf="listaEquiposMostrar.length == 0">
         <ion-card-content>
             <div *ngIf="!editar && tieneEquipo" class="ion-text-center">
                 <h2>{{equipoObjeto.descripcion ? equipoObjeto.descripcion : 'Sin Descripción'}}</h2>
@@ -51,9 +53,44 @@
         </ion-card-content>
     </ion-card>
 
-    <ion-button *ngIf="!tieneEquipo" class="ion-padding" expand="block" color="secondary" (click)="crearEquipo()">
-        Crear Equipo
-    </ion-button>
+    <div *ngIf="listaEquiposMostrar.length == 0">
+        <ion-grid>
+            <ion-row>
+                <ion-col size="6">
+                    <ion-button *ngIf="!tieneEquipo" class="ion-padding" expand="block" color="secondary"
+                                (click)="crearEquipo()">
+                        Crear
+                    </ion-button>
+                </ion-col>
+                <ion-col size="6">
+                    <ion-button *ngIf="!tieneEquipo" class="ion-padding" expand="block" color="secondary"
+                                (click)="buscarEquipos()">
+                        Buscar
+                    </ion-button>
+                </ion-col>
+            </ion-row>
+        </ion-grid>
+    </div>
+
+
+    <div *ngIf="listaEquiposMostrar.length > 0" class="ion-padding">
+        <ion-card>
+            <ion-row class="ion-padding-bottom" *ngFor="let x of listaEquiposMostrar">
+                <ion-col size="9">
+                    <ion-label>
+                        <h1 class="ion-no-margin">{{x.nombre.toUpperCase()}}</h1>
+                        <h3 class="ion-no-margin">{{x.descripcion}}</h3>
+                        <h4 class="ion-no-margin">{{'San Jose - Tarrazú'}}</h4>
+                    </ion-label>
+                </ion-col>
+                <ion-col size="3">
+                    <ion-button fill="outline" color="primary" (click)="enviarSolicitud(x)">
+                        <ion-icon md="add-circle-sharp"></ion-icon>
+                    </ion-button>
+                </ion-col>
+            </ion-row>
+        </ion-card>
+    </div>
 
 
     <div *ngIf="!editar && tieneEquipo">
@@ -71,6 +108,33 @@
 
             <div *ngIf="tab == 'JUGADOR'">
                 JUGADOR
+
+
+                <ion-item>
+                    <ion-label position="floating"><strong>Buscar</strong></ion-label>
+                    <ion-input name="nombre" type="text" [(ngModel)]="texto" (ionChange)="buscar()"></ion-input>
+                </ion-item>
+
+                <ion-grid>
+                    <ion-row class="ion-padding-bottom">
+                        <ion-col size="9"><strong>Usuario</strong>
+                        </ion-col>
+                        <ion-col size="3"><strong>Acceso</strong></ion-col>
+                    </ion-row>
+                    <ion-row class="ion-padding-bottom" *ngFor="let jugador of equipoObjeto.jugardores">
+                        <ion-col size="9">
+                            <ion-label>
+                                <h2>{{jugador.usuario.nombre}} {{jugador.usuario.apellidos}}</h2>
+                                <h3></h3>
+                                <p>{{jugador.usuario.email}}</p>
+                            </ion-label>
+                        </ion-col>
+                        <ion-col size="3">
+                            <!--<ion-toggle [(ngModel)]="usuario.activo" (ionChange)="actualizar(usuario)">Habilitar</ion-toggle>-->
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+
 
                 <ion-fab horizontal="end" vertical="bottom" slot="fixed">
                     <ion-fab-button color="secondary" class="">
