--- a/src/app/crear-equipo/crear-equipo.component.html
+++ b/src/app/crear-equipo/crear-equipo.component.html
@@ -151,7 +151,7 @@
                 <h2>{{datosUbicacion(equipoObjeto.ubicacion.codigoProvincia, equipoObjeto.ubicacion.codigoCanton)}}</h2>
 
                 <br>
-                <h4>{{equipoObjeto.jugardores.length}} Jugadores</h4>
+                <h4>{{cantidadJugadores}} Jugadores</h4>
 
 
                 <ion-fab horizontal="end" vertical="bottom" slot="fixed">
