--- a/src/app/pages/maintenance/clientes/clientes.page.html
+++ b/src/app/pages/maintenance/clientes/clientes.page.html
@@ -31,22 +31,39 @@
 
     <ion-grid>
         <ion-row class="ion-padding-bottom">
-            <ion-col size="9"><strong>Usuario</strong>
+            <ion-col size="8"><strong>Usuario</strong>
             </ion-col>
-            <ion-col size="3"><strong>Acceso</strong></ion-col>
+            <ion-col size="4"><strong>Acceso</strong></ion-col>
         </ion-row>
-        <ion-row class="ion-padding-bottom" *ngFor="let usuario of usuarios">
-            <ion-col size="9">
-                <ion-label>
-                    <h2>{{usuario.nombre}} {{usuario.apellidos}}</h2>
-                    <h3></h3>
-                    <p>{{usuario.email}}</p>
-                </ion-label>
-            </ion-col>
-            <ion-col size="3">
-                <ion-toggle [(ngModel)]="usuario.activo" (ionChange)="actualizar(usuario)">Habilitar</ion-toggle>
-            </ion-col>
-        </ion-row>
+
+        <div *ngFor="let usuario of usuarios" class="ion-padding-bottom">
+
+            <ion-item>
+                <ion-label position="floating">ROL</ion-label>
+                <ion-select interface="action-sheet" cancelText="Cancelar" doneText="Aceptar">
+                    <ion-select-option value="1">JUGADOR</ion-select-option>
+                    <ion-select-option value="2">CANCHA</ion-select-option>
+                    <ion-select-option value="3">SISTEMA</ion-select-option>
+                </ion-select>
+            </ion-item>
+
+            <ion-row>
+                <ion-col size="8">
+                    <ion-label>
+                        <h2>{{usuario.nombre}} {{usuario.apellidos}}</h2>
+                        <h3></h3>
+                        <p>{{usuario.email}}</p>
+                    </ion-label>
+                </ion-col>
+                <ion-col size="4">
+                    <ion-toggle class="ion-no-margin" [(ngModel)]="usuario.activo" (ionChange)="actualizar(usuario)">
+                        Habilitar
+                    </ion-toggle>
+                </ion-col>
+            </ion-row>
+
+        </div>
+
     </ion-grid>
 
     <!-- <ion-fab vertical="bottom" horizontal="end" slot="fixed">
