--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,21 @@
             </ion-item>
           </ion-menu-toggle>
 
+          <ion-list-header class="ion-padding">Reportes</ion-list-header>
+
+          <ion-menu-toggle auto-hide="false" *ngFor="let p of appReportes; let i = index">
+            <ion-item (click)="selectedIndexReportes = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false">
+              <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
+              <ion-label>{{ p.title }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+
         </ion-list>
+
+        
+
+        
+
 
         <!-- <ion-list id="labels-list">
           <ion-list-header>Labels</ion-list-header>
