PERMISOS MENU LATERAL

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
 
 
 
-<!-- 
+<!--
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app> -->
 
@@ -34,7 +34,7 @@
           <ion-note>Soccer Match</ion-note>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages; let i = index">
-            <ion-item (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
+            <ion-item  *ngIf="p.visible" (click)="selectedIndex = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false" [class.selected]="selectedIndex == i">
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
@@ -43,7 +43,7 @@
           <ion-list-header class="ion-padding">Mantenimiento</ion-list-header>
 
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appMaintenance; let i = index">
-            <ion-item (click)="selectedIndexMaintenance = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false">
+            <ion-item *ngIf="p.visible" (click)="selectedIndexMaintenance = i" routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false">
               <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
               <ion-label>{{ p.title }}</ion-label>
             </ion-item>
