--- a/src/app/pages/maintenance/clientes/clientes.page.html
+++ b/src/app/pages/maintenance/clientes/clientes.page.html
@@ -38,30 +38,35 @@
 
         <div *ngFor="let usuario of usuarios" class="ion-padding-bottom">
 
-            <ion-item>
-                <ion-label position="floating">ROL</ion-label>
-                <ion-select (ionChange)="actualizar(usuario)" interface="action-sheet" cancelText="Cancelar" [(ngModel)]="usuario.acceso.mascara" doneText="Aceptar">
-                    <ion-select-option value="1">JUGADOR</ion-select-option>
-                    <ion-select-option value="2">CANCHA</ion-select-option>
-                    <ion-select-option value="3">SISTEMA</ion-select-option>
-                </ion-select>
-            </ion-item>
+            <div *ngIf="usuario.uid != user.uid">
 
-            <ion-row>
-                <ion-col size="8">
-                    <ion-label>
-                        <h2>{{usuario.nombre}} {{usuario.apellidos}}</h2>
-                        <h3></h3>
-                        <p>{{usuario.email}}</p>
-                    </ion-label>
-                </ion-col>
-                <ion-col size="4">
-                    <ion-toggle class="ion-no-margin" [(ngModel)]="usuario.activo" (ionChange)="actualizar(usuario)">
-                        Habilitar
-                    </ion-toggle>
-                </ion-col>
-            </ion-row>
+                <ion-item>
+                    <ion-label position="floating">ROL</ion-label>
+                    <ion-select (ionChange)="actualizar(usuario)" interface="action-sheet" cancelText="Cancelar"
+                                [(ngModel)]="usuario.acceso.mascara" doneText="Aceptar">
+                        <ion-select-option value="1">JUGADOR</ion-select-option>
+                        <ion-select-option value="2">CANCHA</ion-select-option>
+                        <ion-select-option value="3">SISTEMA</ion-select-option>
+                    </ion-select>
+                </ion-item>
 
+                <ion-row>
+                    <ion-col size="8">
+                        <ion-label>
+                            <h2>{{usuario.nombre}} {{usuario.apellidos}}</h2>
+                            <h3></h3>
+                            <p>{{usuario.email}}</p>
+                        </ion-label>
+                    </ion-col>
+                    <ion-col size="4">
+                        <ion-toggle class="ion-no-margin" [(ngModel)]="usuario.activo"
+                                    (ionChange)="actualizar(usuario)">
+                            Habilitar
+                        </ion-toggle>
+                    </ion-col>
+                </ion-row>
+
+            </div>
         </div>
 
     </ion-grid>
