--- a/src/app/Reportes/reportes/reportes.page.html
+++ b/src/app/Reportes/reportes/reportes.page.html
@@ -45,7 +45,7 @@
 
 
                       <ion-row class="">
-                          <ion-col size="12" (click)="mostrarModal(reserva.cancha)">
+                          <ion-col size="12">
                               <div class="ion-padding-top ion-padding-start ion-padding-bottom" style="height: 90px">
                                   <h1 style="font-size: 20px;" class="ion-no-margin">
                                       {{reserva.cancha.nombre}}</h1>
