--- a/src/app/pages/noticias/noticias.page.html
+++ b/src/app/pages/noticias/noticias.page.html
@@ -1,32 +1,68 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>noticias</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>noticias</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
 
-  <h1 class="ion-text-center">NOTICIAS</h1>
+    <ion-grid>
+        <div *ngFor="let noticia of noticias" class="ion-padding-bottom">
+            <ion-card>
 
-  <ion-card>
-    <ion-card-content>
-      <ion-grid>
-        <ion-row>
-          <ion-col>
-      <ion-list>
-        <ion-item *ngFor="let noticia of noticias">
-          <ion-label>
-            <h2>{{noticia.tipo}}</h2>
-            <div>{{noticia.descripcion}}</div>
-            <h5>{{noticia.fecha}}</h5>
-          </ion-label>
-          <!-- <ion-button fill="outline" slot="end">
-          </ion-button> -->
-        </ion-item>
-      </ion-list>
-    </ion-col>
-    </ion-row>
+                <ion-card-header>
+                    <h4 style="font-size: 15px" class="ion-no-margin ion-text-center">
+                    {{noticia.tipo.toUpperCase()}}</h4>
+                </ion-card-header>
+                <ion-card-content>
+
+                    <ion-row>
+                        <ion-col size="12">
+
+                            <p>{{noticia.descripcion}}</p>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col size="3">
+                            <ion-button fill="outline" color="light" (click)="meGusta(noticia)">
+                                <ion-icon color="{{existe(noticia) ? 'danger' : 'primary'}}" md="heart-sharp"></ion-icon>
+                            </ion-button>
+                        </ion-col>
+                        <ion-col size="3" style="top: 17px;">
+                            <p>{{noticia.like ? noticia.like.length : 0}}</p>
+                        </ion-col>
+                        <ion-col size="6" style="top: 17px;">
+                            {{tiempo(noticia)}}
+                        </ion-col>
+                    </ion-row>
+
+                </ion-card-content>
+
+            </ion-card>
+
+        </div>
     </ion-grid>
-    </ion-card-content>
-  </ion-card>
+
+
+    <!--<ion-card>-->
+    <!--<ion-card-content>-->
+    <!--<ion-grid>-->
+    <!--<ion-row>-->
+    <!--<ion-col>-->
+    <!--<ion-list>-->
+    <!--<ion-item *ngFor="let noticia of noticias">-->
+    <!--<ion-label>-->
+    <!--<h2>{{noticia.tipo}}</h2>-->
+    <!--<div>{{noticia.descripcion}}</div>-->
+    <!--<h5>{{noticia.fecha}}</h5>-->
+    <!--</ion-label>-->
+    <!--&lt;!&ndash; <ion-button fill="outline" slot="end">-->
+    <!--</ion-button> &ndash;&gt;-->
+    <!--</ion-item>-->
+    <!--</ion-list>-->
+    <!--</ion-col>-->
+    <!--</ion-row>-->
+    <!--</ion-grid>-->
+    <!--</ion-card-content>-->
+    <!--</ion-card>-->
 </ion-content>
