--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -22,7 +22,7 @@
     <ion-tab-button tab="noticias">
       <ion-icon md="newspaper"></ion-icon>
       <ion-label>Noticias</ion-label>
-      <ion-badge>6</ion-badge>
+      <ion-badge></ion-badge>
     </ion-tab-button>
 
   </ion-tab-bar>
