--- a/src/app/pages/maintenance/clientes/clientes.page.html
+++ b/src/app/pages/maintenance/clientes/clientes.page.html
@@ -3,7 +3,7 @@
         <ion-buttons slot="start">
             <ion-back-button [text]="''" defaultHref="home"></ion-back-button>
         </ion-buttons>
-        <ion-title>Clientes</ion-title>
+        <ion-title>Usuarios</ion-title>
     </ion-toolbar>
 </ion-header>
 
