--- a/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
+++ b/src/app/pages/maintenance/canchaM/crear-cancha/crear-cancha.component.html
@@ -186,7 +186,7 @@
 
 
                 <ion-row>
-                    <ion-col size="4">
+                    <ion-col size="6">
                         <ion-item class="ion-no-padding">
                             <ion-label position="floating">Inicio</ion-label>
                             <ion-datetime name="horaInicio" [(ngModel)]="canchaObjeto.horario.horaInicio"
@@ -195,7 +195,7 @@
                         </ion-item>
                     </ion-col>
 
-                    <ion-col size="4">
+                    <ion-col size="6">
                         <ion-item class="ion-no-padding">
                             <ion-label position="floating">Fin</ion-label>
                             <ion-datetime name="horaFin" [(ngModel)]="canchaObjeto.horario.horaFin"
@@ -204,13 +204,13 @@
                         </ion-item>
                     </ion-col>
 
-                    <ion-col size="4">
-                        <ion-item class="ion-no-padding">
-                            <ion-label position="floating">Tiempo</ion-label>
-                            <ion-input name="tiempoJuego" type="number" [(ngModel)]="canchaObjeto.horario.tiempoJuego"
-                                       required></ion-input>
-                        </ion-item>
-                    </ion-col>
+                    <!--<ion-col size="4">-->
+                        <!--<ion-item class="ion-no-padding">-->
+                            <!--<ion-label position="floating">Tiempo</ion-label>-->
+                            <!--<ion-input name="tiempoJuego" type="number" [(ngModel)]="canchaObjeto.horario.tiempoJuego"-->
+                                       <!--required></ion-input>-->
+                        <!--</ion-item>-->
+                    <!--</ion-col>-->
                 </ion-row>
 
 
@@ -242,15 +242,15 @@
                 <br>
             </form>
 
-            <ion-item *ngIf="actualizar" class="ion-no-padding">
-                <ion-label>Estado</ion-label>
-                <ion-toggle name="estado" [(ngModel)]="canchaObjeto.estado"></ion-toggle>
-            </ion-item>
+            <!--<ion-item *ngIf="actualizar" class="ion-no-padding">-->
+                <!--<ion-label>Estado</ion-label>-->
+                <!--<ion-toggle name="estado" [(ngModel)]="canchaObjeto.estado"></ion-toggle>-->
+            <!--</ion-item>-->
             <br>
 
-            <ion-button *ngIf="actualizar" (click)="elimiar()" class="ion-padding" expand="block" color="danger">
-                ELIMINAR
-            </ion-button>
+            <!--<ion-button *ngIf="actualizar" (click)="elimiar()" class="ion-padding" expand="block" color="danger">-->
+                <!--ELIMINAR-->
+            <!--</ion-button>-->
 
         </ion-card-content>
     </ion-card>
