--- a/src/app/components/mostrar-cancha/mostrar-cancha.component.html
+++ b/src/app/components/mostrar-cancha/mostrar-cancha.component.html
@@ -21,7 +21,7 @@
       </ion-label>
     </ion-item-divider>
 
-    <p>lacancha@hotmail.com</p>
+    <p>{{cancha.correo}}</p>
       <ion-row>
         <ion-col size="6">
           <ion-button fill="outline" color="light" (click)="llamar(cancha.telefono)">
