--- a/src/app/pages/maintenance/clientes/clientes.page.html
+++ b/src/app/pages/maintenance/clientes/clientes.page.html
@@ -27,6 +27,7 @@
     <ion-item>
         <ion-label position="floating"><strong>Buscar</strong></ion-label>
         <ion-input name="nombre" type="text" [(ngModel)]="texto" (ionChange)="buscar()"></ion-input>
+        <ion-icon md="search-outline" slot="end"></ion-icon>
     </ion-item>
 
     <ion-grid>
