Crear Retos a partir de un equipo (publico y privado)

--- a/src/app/pages/reserva/reserva.page.html
+++ b/src/app/pages/reserva/reserva.page.html
@@ -59,7 +59,7 @@
 
                             <ion-col size="4">
                                 <ion-row>
-                                    <ion-button fill="outline" color="light"  (click)="agregarEquipo()">
+                                    <ion-button fill="outline" color="light"  (click)="agregarEquipo(reserva)">
                                         <ion-icon color="primary" md="person-add"></ion-icon>
                                     </ion-button>
                                 </ion-row>
